--- a/tasks/es-Debian.yml
+++ b/tasks/es-Debian.yml
@@ -1,4 +1,16 @@
 ---
+# Set vm.swappiness to 1 in /etc/sysctl.conf
+- sysctl:
+    name: vm.swappiness
+    value: "{{ swapness }}"
+    state: present
+
+# Set virtual max area /etc/sysctl.conf
+- sysctl:
+    name: vm.max_map_count
+    value: "{{ vm_max_count }}"
+    state: present
+
 # Install apt-transports package required for Installation of Elasticsearch
 - name: install apt-transports
   apt: name=apt-transport-https state=present
