--- a/tasks/es-RedHat.yml
+++ b/tasks/es-RedHat.yml
@@ -2,6 +2,7 @@
 # install libselinux-python on centos7
 - name: Install net-tools
   yum: name=net-tools
+  when: "ansible_os_family == 'RedHat' and ansible_distribution_major_version == '7'"
 
 # Set vm.swappiness to 1 in /etc/sysctl.conf
 - sysctl:
@@ -20,20 +21,25 @@
 - name: Download rpm.
   get_url: url=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elasticsearch_version }}.rpm dest=/tmp/elasticsearch-{{ elasticsearch_version }}.rpm
 
+# enable openfile limit without restart
+- name: enable open file witout restart
+  shell: "ulimit -n 4096"
+
 # Install rpm file elasticsearch
 - name: install elasticsearch
   yum: name=/tmp/elasticsearch-{{ elasticsearch_version }}.rpm state=present
   notify:
    - restart elasticsearch
 
-# Create heap dump directory
-- name: Create heap dump directory
-  file: path={{ es_jvm_dump }} state=directory
+# Create directory for es_data and heap_dump storage
+- name: Create data_path directory
+  file: path={{ item }} state=directory owner=elasticsearch group=elasticsearch mode=0775 recurse=yes
+  with_items:
+      - "{{ data_path }}"
+      - "{{ es_jvm_dump }}"
+  notify:
+    - restart elasticsearch
 
 # Enable elaticsearch
 - name: Enable elasticsearch
   systemd: name=elasticsearch enabled=yes
-
-# Start elasticsearch
-- name: Starting Elasticsearch service
-  service: name=elasticsearch state=started
