--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@ es_jvm_dump: /var/lib/elasticsearch/heap
 data_path: /var/lib/elasticsearch
 log_path: /var/log/elasticsearch
 
-elasticsearchIP: "0.0.0.0"
+elasticsearchIP: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 http_port: 9200
 tcp_port: 9300
 zen_host: "[\"{{ groups['esm'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) | join('\",\"') }}\"]"
