--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,5 +3,6 @@
 - name: restart elasticsearch
   service: name=elasticsearch state=restarted
 
+# reload systemd after modification
 - name: reload systemd
   systemd: daemon_reload=yes
