--- a/tasks/es-Debian.yml
+++ b/tasks/es-Debian.yml
@@ -29,16 +29,23 @@
 - name: Download deb.
   get_url: url=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-{{ elasticsearch_version }}.deb dest=/tmp/elasticsearch-{{ elasticsearch_version }}.deb
 
+# enable openfile limit without restart
+- name: enable open file witout restart
+  shell: "ulimit -n 4096"
+
 # Install deb file elasticsearch
 - name: install elasticsearch
   apt: deb=/tmp/elasticsearch-{{ elasticsearch_version }}.deb 
 
-# Create heap dump directory
-- name: Create heap dump directory
-  file: path={{ es_jvm_dump }} state=directory
+# Create directory for es_data and heap_dump storage
+- name: Create data_path directory
+  file: path={{ item }} state=directory owner=elasticsearch group=elasticsearch mode=0775 recurse=yes
+  with_items:
+      - "{{ data_path }}"
+      - "{{ es_jvm_dump }}"
   notify:
-   - restart elasticsearch
-
+    - restart elasticsearch
+    
 # Enable elaticsearch
 - name: Enable elasticsearch
   service: name=elasticsearch enabled=yes
