--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,7 +20,7 @@ zen_host: "[\"{{ groups['esm'] | map('extract', hostvars, ['ansible_default_ipv4
 min_heap: "{{ ansible_memtotal_mb // 2 }}m"
 max_heap: "{{ ansible_memtotal_mb // 2 }}m"
 
-m_lock: "true"
+m_lock: "false"
 nofile_limit: "65536"
 nproc_limit: "5000"
 swapness: "1"
