updated the role for version 7

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,9 @@
 ---
 # handlers file for elasticsearch
 - name: restart elasticsearch
-  service: name=elasticsearch state=restarted
+  systemd:
+    name: elasticsearch
+    state: restarted
 
 # reload systemd after modification
 - name: reload systemd
