updated as per suggested

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,10 @@
 ---
-elasticsearch_version: "6.5.1"
-es_v: "6"
+elasticsearch_version: "7"
 cluster_name: es-cluster
 
 # Static value ####
-esurl: "elasticsearch/elasticsearch-{{ elasticsearch_version }}"
-es_s: "elasticsearch.service"
+es_url: "elasticsearch/elasticsearch-{{ elasticsearch_version }}"
+es_service: "elasticsearch.service"
 es: "elasticsearch"
 # Static value end #####
 
@@ -13,7 +12,7 @@ es_jvm_dump: /var/lib/elasticsearch/heap
 data_path: /var/lib/elasticsearch
 log_path: /var/log/elasticsearch
 
-esIP: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
+es_IP: "{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 http_port: 9200
 tcp_port: 9300
 zen_host: "[\"{{ groups['esm'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) | join('\",\"') }}\"]"
