--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,7 +2,10 @@
 elasticsearch_version: "7"
 cluster_name: "es-cluster"
 # eneter the path of certificate /tmp/creds/sample.p12
-cert_path: "/home/molu/creds/sample.p12"
+cert_path: "/home/molu/creds/"
+key_name: "node1.key"
+certificate_name: "node1.crt"
+certificate_authorities_name: "ca.crt"
 
 # es_jvm_dump: /var/lib/elasticsearch/heap
 # data_path: /var/lib/elasticsearch
