--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,6 @@
 ---
-elasticsearch_version: "7"
+elasticsearch_version: "7.3.1"
+elasticsearch_series: "7"
 cluster_name: "es-cluster"
 # eneter the path of certificate /tmp/creds/sample.p12
 cert_path: "/home/molu/creds/"
