Changed elastic search to 7.3.2

--- a/tasks/es-RedHat.yml
+++ b/tasks/es-RedHat.yml
@@ -26,8 +26,8 @@
 
 - name: Download rpm.
   get_url:
-    url: https://artifacts.elastic.co/downloads/{{ es_url }}-x86_64.rpm
-    dest: /tmp/elasticsearch-{{ elasticsearch_version }}-{{ ansible_machine }}.rpm
+    url: https://artifacts.elastic.co/downloads/{{ es_url }}-{{ ansible_machine }}.rpm
+    dest: /tmp/elasticsearch-{{ elasticsearch_version }}.rpm
   when: elasticserach_version is version('7.0.0', '>=')
 
 
@@ -37,7 +37,7 @@
 
 # Install rpm file elasticsearch
 - name: install elasticsearch
-  yum: name=/tmp/elasticsearch-{{ elasticsearch_version }}-x86_64.rpm state=present
+  yum: name=/tmp/elasticsearch-{{ elasticsearch_version }}.rpm state=present
   notify:
     - restart elasticsearch
 
