--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-elasticsearch_version: "7.3.2"
+elasticsearch_version: "7.4.0"
 elasticsearch_series: "7"
-cluster_name: node
+cluster_name: es-cluster
 
 
 # Static value ####
