--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,30 +1,33 @@
 ---
 galaxy_info:
-    author: MoulenduGhosh
-    description: Install Elasticsearch in Cluster mode
+  author: MoulenduGhosh
+  description: Install Elasticsearch in Cluster mode
+  company: Opstree Solutions
+  license: GPLv3
+  min_ansible_version: 2.7
+  role_name: elasitcsearch_cluster
+  namespace: opstree_devops
 
-    min_ansible_version: 2.7
-
-    platforms:
-        - name: Ubuntu
-          versions:
-              - xenial
-              - precise
-              - trusty
-        - name: Debian
-          versions:
-              - jessie
-              - wheezy
-        - name: EL
-          versions:
-              - 7
-    galaxy_tags:
-        - web
-        - system
-        - monitoring
-        - logging
-        - lucene
-        - elk
-        - efk
-        - elasticsearch
+  platforms:
+    - name: Ubuntu
+      versions:
+        - xenial
+        - precise
+        - trusty
+    - name: Debian
+      versions:
+        - jessie
+        - wheezy
+    - name: EL
+      versions:
+        - 7
+  galaxy_tags:
+    - web
+    - system
+    - monitoring
+    - logging
+    - lucene
+    - elk
+    - efk
+    - elasticsearch
 dependencies: []
